--- a/notes/01_pca/0_cov.tex
+++ b/notes/01_pca/0_cov.tex
@@ -47,16 +47,16 @@ $\vec{C}_{N \times N}$ is real and symmetric.
 \mode<presentation>{
 \only<1>{
 \begin{center}
-\includegraphics[width=0.6\textwidth]{img/scatter}%
+\includegraphics[width=0.55\textwidth]{img/scatter}%
 \end{center}
 }
 \only<2>{
 \begin{center}
-\includegraphics[width=0.6\textwidth]{img/cov}%
+\includegraphics[width=0.55\textwidth]{img/cov}%
 \end{center}
-
-\slidesonly{\vspace{-10mm}}
 }
+
+\svspace{-8mm}
 }
 
 
