--- a/notes/00_lagrange/1_lagrange.tex
+++ b/notes/00_lagrange/1_lagrange.tex
@@ -216,11 +216,11 @@ In the case of {\color{red}{inequality}} constraints, our constrained optimizati
 \label{eq:optimizationINequalitymultipe}
 \end{equation}
 
-However, the Lagrangian remains the same\notesonly{ as in \eqref{eq:lagrangianmultiple}}. The inequality is taken into account in that the solutions for $\lambda$ extend to some range:
+This leads to the following changes to Lagrangian in order to take the inequality and the type of optimization (\textcolor{magenta}{max} vs. min) into account. The inequality is taken into account in that the solutions for $\lambda$ extend to some range:
 
 \begin{equation}
 L(\,\vec w\;, \{\lambda_k\}
-) \; := \; f_0(\vec w) + \sum_{k=1}^{m} \lambda_k \, f_k(\vec w)\,,\qquad
+) \; := \; {\color{magenta}-} \; f_0(\vec w) + \sum_{k=1}^{m} \lambda_k \, f_k(\vec w)\,,\qquad
 \lambda_{k} \;{\color{red}{\ge}}\; 0 \quad \forall k \in \{1,\ldots,m\}
 \label{eq:lagrangianINequalitymultiple}
 \end{equation}
