--- a/notes/02_online-pca/1_oja.tex
+++ b/notes/02_online-pca/1_oja.tex
@@ -10,8 +10,9 @@
 	%through implicit normalization
 	
 	%\end{center}
+	\svspace{5mm}
     \begin{center}
-		\includegraphics[width=5cm]{img/meme_oja}
+		\includegraphics[width=4cm]{img/meme_oja}
     \end{center}
 \end{frame}
 }
@@ -62,10 +63,12 @@ still
 	%\begin{center}
 	%Dealing with the diverging hebbian rule\\
 	%through implicit normalization
-	\pause
+	%\pause
 	%\end{center}
+	\svspace{5mm}
     \begin{center}
-		\includegraphics[width=5cm]{img/meme_normalization}
+		\includegraphics<2>[width=2cm]{img/smart_cookie}
+		\includegraphics<3>[width=4cm]{img/meme_normalization}
     \end{center}
 \end{frame}
 }
@@ -123,7 +126,14 @@ If we were using the decay term, we wouldn't need an explicit normalization.
 
 \question{Does Oja's rule give different results than the explicit normalization?}\\
 
-- No.\\
+\notesonly{- No.\\}
+
+\mode<presentation>{
+\svspace{5mm}
+\begin{center}
+	\includegraphics[width=3.5cm]{img/meme_ojaexplicit-same}
+\end{center}
+}
 
 \pause
 
