--- a/notes/02_online-pca/1_online-pca.tex
+++ b/notes/02_online-pca/1_online-pca.tex
@@ -24,7 +24,7 @@ Note that
 
 \pause
 
-- All other PCs
+- Find all other PCs
 
 \end{frame}
 
@@ -37,7 +37,9 @@ Note that
 %\includegraphics<2>[width=4cm]{img/section2_fig5_b_2_blue}
 \includegraphics[width=4cm]{img/section2_fig5_b_2_blue-red}
 %}
+\only<1>{
 \captionof{figure}{A neural network}
+}
 \end{center}
 \svspace{-3mm}
 
