--- a/notes/02_online-pca/2_apply-online-pca.tex
+++ b/notes/02_online-pca/2_apply-online-pca.tex
@@ -74,7 +74,7 @@ Can also be done using ``standard'' or ``batch'' PCA.
 
 \begin{frame}
 
-\question{Are the other ways to learn a novelty filter without PCA?}
+\question{Are there other ways to learn a novelty filter without PCA?}
 
 \pause
 
@@ -206,9 +206,9 @@ $\Bigg|$
 }
 
 \pause
-
+\notesonly{
 - staionarity of the data\\
 - can I fit all the data into memory?
-
+}
 
 \end{frame}
