--- a/notes/03_kernel-pca/3_kpca.tex
+++ b/notes/03_kernel-pca/3_kpca.tex
@@ -347,7 +347,7 @@ We end up with this formulation of the eigenvalue problem:
 
 \end{frame}
 
-\begin{frame}{Side-note: Arriving at the matrx notation}
+\begin{frame}{Side-note: Arriving at the matrix notation}
 
 \notesonly{Side note: Going from \eqref{eq:eigK} to the matrix notation:\\}
 
@@ -404,7 +404,7 @@ Recall that we're doing this ${\color{red}\forall \gamma}$ (i.e. all rows). Ther
 
 \definecolor{darkgreen}{rgb}{0,0.6,0}
 
-\begin{frame}{Side-note: Arriving at the matrx notation - LHS}
+\begin{frame}{Side-note: Arriving at the matrix notation - LHS}
 
 Next, we look at the LHS\notesonly{ of \eqref{eq:eigK}}:
 
