fix sec and eq refwerences

--- a/notes/03_kernel-pca/2_trick.tex
+++ b/notes/03_kernel-pca/2_trick.tex
@@ -35,7 +35,7 @@ K_{p1} & & & K_{pp}
 }
 \end{equation}
 
-$\vec K$ (without the ``\textasciitilde'') denotes the normalized or ``centered'' kernel matrix. \notesonly{cf. \sectionref{sec:centerkernel} why and how to center the Kernel matrix.}
+$\vec K$ (without the ``\textasciitilde'') denotes the normalized or ``centered'' kernel matrix. \notesonly{cf. \sectionref{sec:centerkernel} on why and how to center the Kernel matrix.}
 
 \question{What is the dimensionality of $\widetilde {\vec K}$?}
 
