--- a/notes/03_kernel-pca/3_kpca.tex
+++ b/notes/03_kernel-pca/3_kpca.tex
@@ -291,7 +291,7 @@ K_{\alpha \beta}
 
 \newpage
 
-\notesonly{Eq.\ref{eq:eig4} without the clutter:}
+\notesonly{\eqref{eq:eig4} without the clutter:}
 
 \begin{equation} \label{eq:eigK}
 \frac{1}{p} \sum_{\alpha=1}^{p} \sum^{p}_{\beta=1} 
@@ -316,7 +316,7 @@ Use matrix notation to reduce the clutter.
 \begin{frame}
 
 \slidesonly{
-\begin{equation} \label{eq:eigK}
+\begin{equation}
 \frac{1}{p} \sum_{\alpha=1}^{p} \sum^{p}_{\beta=1} 
 a^{(\beta)}
 K_{\gamma \alpha}
@@ -327,7 +327,7 @@ K_{\gamma \beta} \quad {\color{red}\forall \gamma}
 \end{equation}
 }
 
-We want to solve \notesonly{\eqref{eq:eq:eigK}}\slidesonly{the above} \textbf{for all} training samples $\gamma$.
+We want to solve \notesonly{\eqref{eq:eigK}}\slidesonly{the above} \textbf{for all} training samples $\gamma$.
 We can further reduce the clutter by using matrix notation.\\ 
 Specifically, by computing the \emph{kernel matrix} $\vec K=\{K_{\alpha\beta}\}$, where \\
 \begin{equation}
