--- a/notes/03_kernel-pca/4_centering.tex
+++ b/notes/03_kernel-pca/4_centering.tex
@@ -1,5 +1,7 @@
 \subsection{Centering the kernel matrix}
 
+\label{sec:centerkernel}
+
 \begin{frame}{\subsecname}
 
 PCA operates on centered data. This is common for all forms  of PCA, 
