--- a/notes/04_density-transform/3_density-transform.tex
+++ b/notes/04_density-transform/3_density-transform.tex
@@ -164,7 +164,7 @@ The difference vector\notesonly{ between the two corresponding points} in $u(\Om
 \begin{array}{r}
 \rmat{
 u_1 (x_1 + dx_1, x_2)\\
-u_2 (x_1 + dx_2, x_2)
+u_2 (x_1 + dx_{\color{magenta}1}, x_2)
 } - 
 \rmat{
 u_1 (x_1, x_2)\\
@@ -173,7 +173,7 @@ u_2 (x_1, x_2)
 =
 \rmat{
 u_1 (x_1 + dx_1, x_2) - u_1 (x_1, x_2)\\
-u_2 (x_1 + dx_2, x_2) - u_2 (x_1, x_2)
+u_2 (x_1 + dx_{\color{magenta}1}, x_2) - u_2 (x_1, x_2)
 }
 \end{array}
 \end{equation}
@@ -195,7 +195,7 @@ u_2 (x_1 + dx_2, x_2) - u_2 (x_1, x_2)
 \begin{array}{r}
 \rmat{
 u_1 (x_1 + dx_1, x_2) - u_1 (x_1, x_2)\\
-u_2 (x_1 + dx_2, x_2) - u_2 (x_1, x_2)
+u_2 (x_1 + dx_{\color{magenta}1}, x_2) - u_2 (x_1, x_2)
 }
 \end{array}
 \end{equation}
