--- a/notes/06_fastica/5_fastica.tex
+++ b/notes/06_fastica/5_fastica.tex
@@ -23,6 +23,7 @@ Negentropy $J(\widehat{s})$ of the reconstructed sources $\widehat{\vec s}$ is d
 			\substack{	\text{entropy of the true} \\
 					\text{distribution} \\
 					\text{(variance } \sigma^2 \text{)} }}
+	\label{eq:negentropy}
 \end{equation}
 
 where
