--- a/notes/07_stochopt/2_discrete.tex
+++ b/notes/07_stochopt/2_discrete.tex
@@ -4,7 +4,7 @@
 
 \slidesonly{
 \begin{block}{Supervised \& unsupervised learning $\rightarrow$ evaluation of cost function $E$}
-Find the arguments the optimize $E$.
+Find the arguments that optimize $E$.
 \begin{itemize}
  \item real-valued arguments: gradient based techniques (e.g. ICA unmixing matrices)
  \item discrete arguments: ??? (e.g. for cluster assignment)
