remove unused macro

--- a/latex/headerMIslides.tex
+++ b/latex/headerMIslides.tex
@@ -51,20 +51,20 @@ inner ysep=10pt
 
 % from tex.stackexchange useful to align substacks
 
-\makeatletter
-\newcommand{\subalign}[1]{%
-  \vcenter{%
-    \Let@ \restore@math@cr \default@tag
-    \baselineskip\fontdimen10 \scriptfont\tw@
-    \advance\baselineskip\fontdimen12 \scriptfont\tw@
-    \lineskip\thr@@\fontdimen8 \scriptfont\thr@@
-    \lineskiplimit\lineskip
-    \ialign{\hfil$\m@th\scriptstyle##$&$\m@th\scriptstyle{}##$\crcr
-      #1\crcr
-    }%
-  }
-}
-\makeatother
+%\makeatletter
+%\newcommand{\subalign}[1]{%
+  %\vcenter{%
+    %\Let@ \restore@math@cr \default@tag
+    %\baselineskip\fontdimen10 \scriptfont\tw@
+    %\advance\baselineskip\fontdimen12 \scriptfont\tw@
+    %\lineskip\thr@@\fontdimen8 \scriptfont\thr@@
+    %\lineskiplimit\lineskip
+    %\ialign{\hfil$\m@th\scriptstyle##$&$\m@th\scriptstyle{}##$\crcr
+      %#1\crcr
+    %}%
+  %}
+%}
+%\makeatother
 
 \newcommand{\misubsection}[1]{
 	\subsection{\thesubsection) #1}
