--- a/notes/08_clustering/3_kmeans_online.tex
+++ b/notes/08_clustering/3_kmeans_online.tex
@@ -65,9 +65,8 @@ Online K-means...
     }
 \slidesonly{
 \item ``Noisiness'' of online K-means allows it to escape local minima.
-
 }
- \notesonly{
+\notesonly{
 \item Online K-means is more robust than batch-learning w.r.t convergence to local minima:
 \begin{itemize} 
 \item The noisy nature of online K-means gives it a better chance at ``escaping'' local minima. 
@@ -75,7 +74,7 @@ Online K-means...
 \end{itemize}
 }
 \notesonly{
-\item The quality of the solution found by online K-means depends on choosing an appropriate schedule for $\varepsilon$: Robbins-Munro conditions
+\item The quality of the solution found by online K-means depends on choosing an appropriate schedule for $\varepsilon$: Robbins-Monro conditions
 }
 \slidesonly{
 \item Choose learning rate schedule for $\varepsilon$: Robbins-Munro conditions
