add citation for translated face figures

--- a/notes/10_lle/0_dim_recap.tex
+++ b/notes/10_lle/0_dim_recap.tex
@@ -132,7 +132,7 @@ We are not arguing that PCA does a bad job at dimensionality reduction. This is 
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=4.3cm]{img/fig3_lle_intro_cropped_pca}
-	\caption{PCA projections of translated versions of the same image}
+	\caption{PCA projections of translated versions of the same image \cite{Saul2001AnIT}.}
 	\label{fig:faces_translated_pca}
 \end{figure}
 
