--- a/notes/10_lle/bibliography.bib
+++ b/notes/10_lle/bibliography.bib
@@ -1,29 +1,6 @@
-@book{sutton1998introduction,
-  title={Introduction to reinforcement learning},
-  author={Sutton, Richard S and Barto, Andrew G and others},
-  volume={135},
-  year={1998},
-  publisher={MIT press Cambridge}
-}
-@Book{Bertsekas07,
-  author = 	 {D. P. Bertsekas},
-  title = 	 {Dynamic Programming and Optimal Control},
-  publisher ={Athena Scientific},
-  year = 	 {2007},
-  volume = 	 {2},
-  edition =  {3rd},
-  url = {http://www.control.ece.ntua.gr/UndergraduateCourses/ProxTexnSAE/Bertsekas.pdf}
-}
-@Article{Watkins92,
-  author = 	 {C. Watkins and P. Dayan},
-  title = 	 {Q-learning},
-  journal = 	 {Machine Learning},
-  year = 	 {1992},
-  OPTkey = 	 {},
-  volume = 	 {8},
-  OPTnumber = 	 {},
-  pages = 	 {279--292},
-  OPTmonth = 	 {},
-  OPTnote = 	 {},
-  OPTannote = 	 {}
+@inproceedings{Saul2001AnIT,
+  title={An Introduction to Locally Linear Embedding},
+  author={L. Saul and S. Roweis},
+  year={2001},
+  note = {\href{https://www.semanticscholar.org/paper/An-Introduction-to-Locally-Linear-Embedding-Saul-Roweis/da6495102377f8332b21cef50c35d27fbff627df}{URL}}
 }
