layout changes to notes

--- a/notes/13_hmm/0_hmm-motivation.tex
+++ b/notes/13_hmm/0_hmm-motivation.tex
@@ -89,10 +89,12 @@ e.g. 1-out-of-$M$ coding for $M$ different states:
 
 \end{frame}
 
+\newpage
+
 \begin{frame}{Only}
 \frametitle{Possibilities}
 
-We may want to do:
+We may want to:
 \begin{itemize}
 \item<only@1> Describe the sequence of hidden states:
 $\{ \vec m^{(1)}, \ldots, \vec m^{(t)}, \ldots, \vec m^{(T)}\} = \{ \vec m^{(t)}\}_{t=1}^{T} \stackrel{\substack{\text{for}\\ \text{brevity}}}{=} \{ \vec m^{(t)}\}$
