--- a/notes/13_hmm/3_hmm-inference.tex
+++ b/notes/13_hmm/3_hmm-inference.tex
@@ -102,7 +102,7 @@ P(\{\vec x^{(s)}\}_{s=1}^t, \vec m^{(t)}, \vec m^{(t-1)})
 	}
 \only<2>{
 	\intertext{due to the Markov property
-	$P(\vec x^{(t)}~|~\{\vec x^{(s)}\}_{s=1}^{t-1}, \vec m^{(t)}, \vec m^{(t-1)})
+	$\footnotesize P(\vec x^{(t)}~|~\{\vec x^{(s)}\}_{s=1}^{t-1}, \vec m^{(t)}, \vec m^{(t-1)})
 	=
 	P(\vec x^{(t)}~|~\vec m^{(t)})
 	$}\\
