--- a/notes/13_hmm/tutorial.tex
+++ b/notes/13_hmm/tutorial.tex
@@ -71,6 +71,8 @@
 \input{./0_recap-latent}
 \mode*
 
+\newpage
+
 \mode<all>
 \input{./0_hmm-motivation}
 \mode*
@@ -86,6 +88,8 @@
 \mode<all>
 \input{./2_hmm}
 \mode*
+
+\clearpage
 
 \mode<all>
 \input{./3_hmm-inference}
