--- a/notes/09_som/1_som.tex
+++ b/notes/09_som/1_som.tex
@@ -46,6 +46,9 @@
 \item Each neuron is associated with a prototype $\vec w_{\vec q}$ that lives in $N$-dim input space.
 }
 \only<2>{
+
+\newpage
+
 \item In the case of a 1D map:
 \begin{itemize}
 \item The neurons form a chain in map space.
