--- a/notes/12_gmm-em/2_em.tex
+++ b/notes/12_gmm-em/2_em.tex
@@ -171,7 +171,7 @@ The EM algorithm is an iterative approximate solution to maximizing the likeliho
 
 \begin{block}{The need to alternate}
 
-We need to know who is assigned to which group in order to estimate the density of that group (i.e. identify which date influences a component $q$)\\
+We need to know who is assigned to which group in order to estimate the density of that group (i.e. identify which data influences a component $q$)\\
 \textbf{But} we don't know the assignments.\\
 To get the assignments we need the density of that group\ldots\\
 
