restrict references for article mode only. Not used by any slides

--- a/notes/01_pca/tutorial.tex
+++ b/notes/01_pca/tutorial.tex
@@ -86,12 +86,14 @@
 
 \clearpage
 
+\mode<article>{
 \section{References}
 \begin{frame}[allowframebreaks] \frametitle{References}
 	\scriptsize
 	\bibliographystyle{plainnat}
 	\bibliography{bibliography}
 \end{frame}
+}
 
 \end{rightcolumn}
 \end{paracol}
