--- a/notes/02_online-pca/2_apply-online-pca.tex
+++ b/notes/02_online-pca/2_apply-online-pca.tex
@@ -21,7 +21,7 @@ Applying online PCA for detecting outliers - identifying observations with unusu
 	\includegraphics[width=0.3\textwidth]{img/meme_outlier_novelty}%
 \end{center}
 }
-Calling it an ``outlier'' or a point with `novel'' features depends on the context. But they are essentially the same.
+Calling it an ``outlier'' or a point with ``novel'' features depends on the context. But they are essentially the same.
 
 Can also be done using ``standard'' or ``batch'' PCA.
 
