--- a/notes/01_pca/0_dim.tex
+++ b/notes/01_pca/0_dim.tex
@@ -150,7 +150,7 @@ Let
 \item[]$\vec x \in \R^N$,\\
 \item[] w.l.o.g. $\E[\vec x] \eqexcl \vec 0$ \notesonly{\\
 
-}, i.e. for each variable $x_i$ its mean $m_i = \sum_{\alpha=1}^{p} x_i^{(\alpha)} \eqexcl 0$.
+}, i.e. for each variable $x_i$ its mean $m_i = \frac{1}{p} \sum_{\alpha=1}^{p} x_i^{(\alpha)} \eqexcl 0$.
 \end{itemize}
 
 \pause
