use mode instead of custom command

--- a/notes/03_kernel-pca/3_kpca.tex
+++ b/notes/03_kernel-pca/3_kpca.tex
@@ -156,7 +156,10 @@ a^{(\alpha)}
 \vec{\phi}^{(\beta)}
 \end{equation}
 
-\notesonly{
+\end{frame}
+
+
+\mode<article>{
 
 It is possible to arrive at the linear relationship in \eqref{eq:ephi} by substituting \eqref{eq:cov} into the eigenvalue problem in \eqref{eq:eig}:
 
@@ -182,8 +185,6 @@ It is possible to arrive at the linear relationship in \eqref{eq:ephi} by substi
  The use of the index $\beta$ is only to avoid collisions with $\alpha$ later.
  
 }
-
-\end{frame}
 
 \begin{frame}{\subsubsecname}
 
