slides/notes differences

--- a/notes/03_kernel-pca/3_kpca.tex
+++ b/notes/03_kernel-pca/3_kpca.tex
@@ -33,9 +33,9 @@ which we can actually obtain.\\
 \svspace{10mm}
 
 \underline{Remark:}
-\slidesonly{It might look different from the slides, but it's not}
+\slidesonly{It might look different from the slides, but it's not.}
 \notesonly{A difference between these notes and the lecture slides is that} 
-the lecture slides employ ``identity'' as the mapping. 
+\slidesonly{T}\notesonly{t}he lecture slides employ ``identity'' as the mapping. 
 This is why you don't see $\phi$ in the derivations of Kernel PCA in the slides but rather see $\vec x$ used directly.\\
 
 \end{frame}
