--- a/notes/04_density-transform/2_cdf.tex
+++ b/notes/04_density-transform/2_cdf.tex
@@ -47,7 +47,7 @@ from uniformly distributed random numbers $\tilde z \in [0,1]$:
 F_X(x) = P(X \leq x) = \int_{-\infty}^{x} p(y)\,dy
 \end{equation}
 
-The cdf is a one-to-one mapping of the domain of the cdf to the interval $[0,1]$.
+The cdf is a one-to-one (bijective) mapping of the domain of the cdf to the interval $[0,1]$.
  If $Z$ is a uniform random variable, then $X=F_X^{-1}(Z)$ has the distribution $F$.
 
 \item Determine the inverse transformation $F^{-1}$.
