--- a/notes/03_kernel-pca/3_kpca.tex
+++ b/notes/03_kernel-pca/3_kpca.tex
@@ -794,7 +794,7 @@ u_k(\vec \phi_{(\vec x)}) &= \sum^{p}_{\beta=1} a^{(\beta)}
 }
 
 Since we never had the transformation $\phi$ to begin with. 
-It is not psssible to simply project a sample from PC space back into the original $N$-dimensional input space. 
+It is not possible to simply project a sample from PC space back into the original $N$-dimensional input space. 
 Algorithms exist that \emph{approximate} a ``pre-image'' of some new observation.
 
 \end{frame}
